--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,7 +1,7 @@
 files:
   - source: /docs/**/*.md
     translation: /website/translated_docs/%two_letters_code%/**/%original_file_name%
-    type: fm_md7
+    type: fm_md
   - source: /docs/assets/en/**/*.png
     translation: /docs/assets/%two_letters_code%/**/%original_file_name%
   - source: /website/i18n/en.json
